Correct spacing on homepage and profile page

--- a/cleanslate/doma/static/css/profile.css
+++ b/cleanslate/doma/static/css/profile.css
@@ -53,7 +53,6 @@ div {
 .profile-usermenu ul li {
   border-bottom: 3px solid #f0f4f7;
   list-style-type: none;
-  margin-right:  35px;
 }
 
 .profile-usermenu ul li:last-child {
